# snowflake_aws_pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample_schemas.txt  snowflake_data_81ad294cbb7842a491dec9670a6bd192_20230629-150002.json  snowflake_service.py  write_to_parquet.py
