# configuration for linters and project
[project]
name = "snowflake-data-transfer-to-aws-app"
dependencies = [
    "asn1crypto==1.5.1",
    "certifi==2023.7.22",
    "cffi==1.15.1",
    "charset-normalizer==2.1.1",
    "cryptography==38.0.4",
    "filelock==3.12.2",
    "greenlet==2.0.2",
    "idna==3.4",
    "numpy==1.24.3",
    "oscrypto==1.3.0",
    "packaging==23.1",
    "pandas==1.5.0",
    "pyarrow==8.0.0",
    "pycparser==2.21",
    "pycryptodomex==3.18.0",
    "PyJWT==2.7.0",
    "pyOpenSSL==22.1.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "requests==2.31.0",
    "six==1.16.0",
    "snowflake-connector-python==3.0.2",
    "snowflake-sqlalchemy==1.4.4",
    "sortedcontainers==2.4.0",
    "SQLAlchemy==1.4.48",
    "typing_extensions==4.6.3",
    "urllib3==1.26.16",
    "pyproject-toml",
    "boto3",
    "mypy",
    "ruff",
    "black",
    "pandas-stubs",
    "types-jmespath",
    "types-boto3",
    "types-sqlalchemy",
]
version = "0.1"

[tool.mypy]

[[tool.mypy.overrides]]

module = ["snowflake.sqlalchemy", "snowflake.connector", "snowflake.connector.options", "pyarrow", "pyarrow.parquet"]
ignore_missing_imports = true
